--- a/сайт/index.html
+++ b/сайт/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="header">
 			<div class="logo">
-				<a href=""><img src="images/лого.png" alt=""/></a>
+				<a href="index.html"><img src="images/лого.png" alt=""/></a>
 			</div>
 			<div class="nav">
 				<ul>
@@ -224,7 +224,7 @@
 	</main>
 	<footer>
 		<div class="logo">
-			<a href=""><img src="images/лого.png" alt=""/></a>
+			<a href="index.html"><img src="images/лого.png" alt=""/></a>
 		</div>
 		<div class="media">
 			<div class="contacts">
