--- a/сайт/product4.html
+++ b/сайт/product4.html
@@ -8,7 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap" rel="stylesheet">
-	<title>Document</title>
+	<title>Ножницы Staleks Smart 22/1</title>
 </head>
 <body>
 	<header>
